# self-ledger

./: .gitignore  CLAUDE.md  README.md  app.go  backup.go  db.go  go.mod  go.sum  main.go  nfpm.yaml  package-lock.json  package.json  self-ledger.desktop  vite.config.js  wails.json
.github/workflows/: build.yml
frontend/: .gitignore  package.json  package.json.md5  vite.config.js
frontend/.svelte-kit/: ambient.d.ts
frontend/.svelte-kit/output/client/.vite/: manifest.json
frontend/.svelte-kit/output/client/_app/: version.json
frontend/.svelte-kit/output/client/_app/immutable/assets/: 2.CtFD5cZJ.css
frontend/.svelte-kit/output/client/_app/immutable/chunks/: B-lcsz3Q.js  BMifteI8.js  CYeplY8F.js
frontend/.svelte-kit/output/client/_app/immutable/entry/: app.D8aliflM.js  app.DBB7-Pzh.js
frontend/.svelte-kit/output/prerendered/pages/: index.html
frontend/.svelte-kit/output/server/: manifest-full.js  manifest.js
frontend/.svelte-kit/output/server/.vite/: manifest.json
frontend/.svelte-kit/output/server/chunks/: internal.js  renderer.js  root.js
frontend/.svelte-kit/output/server/entries/pages/: _page.svelte.js
frontend/.svelte-kit/output/server/nodes/: 0.js  1.js  2.js
frontend/src/: hooks.client.ts
frontend/src/routes/: +layout.ts  +page.svelte
frontend/wailsjs/go/: models.ts
frontend/wailsjs/go/main/: App.d.ts  App.js
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  main.rs
src/routes/: +page.svelte
(+5 files in other folders)
